--- a/cliotools/Find stars.ipynb
+++ b/cliotools/Find stars.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,17 +71,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Demonstration with provided example data set.  Image 9 and 13 have stars that are two faint to be detected, so we should expect the script to fail to find those stars and reject those images."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188.0 234.0 365.0 154.0\n",
       "62.0% (8 of 13): |############--------|  Failed to find all stars.\n",
+      "Failed to find all stars.\n",
       "92.0% (12 of 13): |##################--|  Failed to find all stars.\n",
+      "Failed to find all stars.\n",
       "100% (13 of 13): |####################|  Done...\n",
       "Done\n"
      ]
@@ -90,7 +98,7 @@
    "source": [
     "import numpy as np\n",
     "# Specify path to dataset:\n",
-    "path = 'BD03884A/BD03884A_'\n",
+    "path = 'example_data/BD03884A_'\n",
     "# Supply integer location of bright star in the first image in the dataset,\n",
     "# which I have saved in a file called \"initialguess\"\n",
     "rr = np.loadtxt(path.split('/')[0]+'/initialguess')\n",
@@ -106,7 +114,7 @@
     "fwhm = 20 # approx fwhm for psf in image.\n",
     "\n",
     "# Findstars in the dataset:\n",
-    "findstars_in_dataset(path, 2, xca, yca, corrboxsizex = corrboxsize, corrboxsizey = corrboxsize,\\\n",
+    "findstars_in_dataset(path, nstars, xca, yca, corrboxsizex = corrboxsize, corrboxsizey = corrboxsize,\\\n",
     "                     boxsize = boxsize, skip_list = False, \\\n",
     "                     append_file = False, threshold = threshold, radius = radius, fwhm = fwhm)"
    ]
@@ -120,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,132 +162,132 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>BD03884A/BD03884A_00001_skysub.fit</td>\n",
-       "      <td>187.742427</td>\n",
-       "      <td>234.748694</td>\n",
-       "      <td>365.377218</td>\n",
-       "      <td>153.967803</td>\n",
+       "      <td>example_data/BD03884A_00001_skysub.fit</td>\n",
+       "      <td>187.846049</td>\n",
+       "      <td>234.709975</td>\n",
+       "      <td>365.349491</td>\n",
+       "      <td>153.924542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>BD03884A/BD03884A_00002_skysub.fit</td>\n",
-       "      <td>187.767799</td>\n",
-       "      <td>234.827045</td>\n",
-       "      <td>365.441326</td>\n",
-       "      <td>154.466378</td>\n",
+       "      <td>example_data/BD03884A_00002_skysub.fit</td>\n",
+       "      <td>187.847250</td>\n",
+       "      <td>234.765623</td>\n",
+       "      <td>365.514127</td>\n",
+       "      <td>154.481573</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>BD03884A/BD03884A_00003_skysub.fit</td>\n",
-       "      <td>187.515965</td>\n",
-       "      <td>235.327487</td>\n",
-       "      <td>365.387360</td>\n",
-       "      <td>155.279582</td>\n",
+       "      <td>example_data/BD03884A_00003_skysub.fit</td>\n",
+       "      <td>187.781005</td>\n",
+       "      <td>235.037950</td>\n",
+       "      <td>365.420980</td>\n",
+       "      <td>155.148167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>BD03884A/BD03884A_00004_skysub.fit</td>\n",
-       "      <td>187.589005</td>\n",
-       "      <td>235.305617</td>\n",
-       "      <td>365.674937</td>\n",
-       "      <td>155.601454</td>\n",
+       "      <td>example_data/BD03884A_00004_skysub.fit</td>\n",
+       "      <td>187.612027</td>\n",
+       "      <td>235.191426</td>\n",
+       "      <td>365.598349</td>\n",
+       "      <td>155.552064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>BD03884A/BD03884A_00005_skysub.fit</td>\n",
-       "      <td>187.542786</td>\n",
-       "      <td>235.326910</td>\n",
-       "      <td>365.742981</td>\n",
-       "      <td>155.712430</td>\n",
+       "      <td>example_data/BD03884A_00005_skysub.fit</td>\n",
+       "      <td>187.626527</td>\n",
+       "      <td>235.140553</td>\n",
+       "      <td>365.755288</td>\n",
+       "      <td>155.769216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>BD03884A/BD03884A_00006_skysub.fit</td>\n",
-       "      <td>187.089315</td>\n",
-       "      <td>235.513944</td>\n",
-       "      <td>365.211311</td>\n",
-       "      <td>156.599988</td>\n",
+       "      <td>example_data/BD03884A_00006_skysub.fit</td>\n",
+       "      <td>187.170087</td>\n",
+       "      <td>235.303660</td>\n",
+       "      <td>364.923006</td>\n",
+       "      <td>156.358078</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>BD03884A/BD03884A_00007_skysub.fit</td>\n",
-       "      <td>186.943480</td>\n",
-       "      <td>235.690810</td>\n",
-       "      <td>365.038714</td>\n",
-       "      <td>156.659234</td>\n",
+       "      <td>example_data/BD03884A_00007_skysub.fit</td>\n",
+       "      <td>187.142453</td>\n",
+       "      <td>235.544440</td>\n",
+       "      <td>364.986451</td>\n",
+       "      <td>156.610197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>BD03884A/BD03884A_00008_skysub.fit</td>\n",
-       "      <td>186.811133</td>\n",
-       "      <td>236.187762</td>\n",
-       "      <td>365.514222</td>\n",
-       "      <td>157.207327</td>\n",
+       "      <td>example_data/BD03884A_00008_skysub.fit</td>\n",
+       "      <td>186.918615</td>\n",
+       "      <td>235.926963</td>\n",
+       "      <td>365.450547</td>\n",
+       "      <td>157.502997</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>BD03884A/BD03884A_00010_skysub.fit</td>\n",
-       "      <td>186.598578</td>\n",
-       "      <td>236.147086</td>\n",
-       "      <td>365.546560</td>\n",
-       "      <td>157.986468</td>\n",
+       "      <td>example_data/BD03884A_00010_skysub.fit</td>\n",
+       "      <td>186.768840</td>\n",
+       "      <td>235.850013</td>\n",
+       "      <td>365.222143</td>\n",
+       "      <td>157.966508</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>BD03884A/BD03884A_00011_skysub.fit</td>\n",
-       "      <td>733.767415</td>\n",
-       "      <td>288.518923</td>\n",
-       "      <td>914.519355</td>\n",
-       "      <td>210.608250</td>\n",
+       "      <td>example_data/BD03884A_00011_skysub.fit</td>\n",
+       "      <td>733.930551</td>\n",
+       "      <td>288.323377</td>\n",
+       "      <td>914.288672</td>\n",
+       "      <td>210.662894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>BD03884A/BD03884A_00012_skysub.fit</td>\n",
-       "      <td>733.198353</td>\n",
-       "      <td>289.521710</td>\n",
-       "      <td>914.160774</td>\n",
-       "      <td>211.530636</td>\n",
+       "      <td>example_data/BD03884A_00012_skysub.fit</td>\n",
+       "      <td>733.383510</td>\n",
+       "      <td>289.502413</td>\n",
+       "      <td>913.815901</td>\n",
+       "      <td>211.897086</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              filename         xca         yca         xcb  \\\n",
-       "0   BD03884A/BD03884A_00001_skysub.fit  187.742427  234.748694  365.377218   \n",
-       "1   BD03884A/BD03884A_00002_skysub.fit  187.767799  234.827045  365.441326   \n",
-       "2   BD03884A/BD03884A_00003_skysub.fit  187.515965  235.327487  365.387360   \n",
-       "3   BD03884A/BD03884A_00004_skysub.fit  187.589005  235.305617  365.674937   \n",
-       "4   BD03884A/BD03884A_00005_skysub.fit  187.542786  235.326910  365.742981   \n",
-       "5   BD03884A/BD03884A_00006_skysub.fit  187.089315  235.513944  365.211311   \n",
-       "6   BD03884A/BD03884A_00007_skysub.fit  186.943480  235.690810  365.038714   \n",
-       "7   BD03884A/BD03884A_00008_skysub.fit  186.811133  236.187762  365.514222   \n",
-       "8   BD03884A/BD03884A_00010_skysub.fit  186.598578  236.147086  365.546560   \n",
-       "9   BD03884A/BD03884A_00011_skysub.fit  733.767415  288.518923  914.519355   \n",
-       "10  BD03884A/BD03884A_00012_skysub.fit  733.198353  289.521710  914.160774   \n",
+       "                                  filename         xca         yca  \\\n",
+       "0   example_data/BD03884A_00001_skysub.fit  187.846049  234.709975   \n",
+       "1   example_data/BD03884A_00002_skysub.fit  187.847250  234.765623   \n",
+       "2   example_data/BD03884A_00003_skysub.fit  187.781005  235.037950   \n",
+       "3   example_data/BD03884A_00004_skysub.fit  187.612027  235.191426   \n",
+       "4   example_data/BD03884A_00005_skysub.fit  187.626527  235.140553   \n",
+       "5   example_data/BD03884A_00006_skysub.fit  187.170087  235.303660   \n",
+       "6   example_data/BD03884A_00007_skysub.fit  187.142453  235.544440   \n",
+       "7   example_data/BD03884A_00008_skysub.fit  186.918615  235.926963   \n",
+       "8   example_data/BD03884A_00010_skysub.fit  186.768840  235.850013   \n",
+       "9   example_data/BD03884A_00011_skysub.fit  733.930551  288.323377   \n",
+       "10  example_data/BD03884A_00012_skysub.fit  733.383510  289.502413   \n",
        "\n",
-       "           ycb  \n",
-       "0   153.967803  \n",
-       "1   154.466378  \n",
-       "2   155.279582  \n",
-       "3   155.601454  \n",
-       "4   155.712430  \n",
-       "5   156.599988  \n",
-       "6   156.659234  \n",
-       "7   157.207327  \n",
-       "8   157.986468  \n",
-       "9   210.608250  \n",
-       "10  211.530636  "
+       "           xcb         ycb  \n",
+       "0   365.349491  153.924542  \n",
+       "1   365.514127  154.481573  \n",
+       "2   365.420980  155.148167  \n",
+       "3   365.598349  155.552064  \n",
+       "4   365.755288  155.769216  \n",
+       "5   364.923006  156.358078  \n",
+       "6   364.986451  156.610197  \n",
+       "7   365.450547  157.502997  \n",
+       "8   365.222143  157.966508  \n",
+       "9   914.288672  210.662894  \n",
+       "10  913.815901  211.897086  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Using pandas (recommended):\n",
-    "readin = pd.read_csv('BD03884A/ABLocations', \n",
+    "readin = pd.read_csv('example_data/StarLocations', \n",
     "                     delim_whitespace = True, # Spaces separate items in the list\n",
     "                     comment = '#', # Ignore commented rows\n",
     "                     names=['filename', 'xca','yca', 'xcb', 'ycb'] # specify column names\n",
@@ -295,28 +303,28 @@
     {
      "data": {
       "text/plain": [
-       "array([[         nan, 187.74242709, 234.74869447, 365.37721801,\n",
-       "        153.96780303],\n",
-       "       [         nan, 187.76779923, 234.82704529, 365.44132552,\n",
-       "        154.46637752],\n",
-       "       [         nan, 187.51596469, 235.32748672, 365.3873596 ,\n",
-       "        155.27958217],\n",
-       "       [         nan, 187.58900482, 235.30561714, 365.67493675,\n",
-       "        155.6014538 ],\n",
-       "       [         nan, 187.54278572, 235.32691019, 365.74298106,\n",
-       "        155.71243004],\n",
-       "       [         nan, 187.0893151 , 235.51394442, 365.21131068,\n",
-       "        156.59998825],\n",
-       "       [         nan, 186.94348047, 235.69080966, 365.03871379,\n",
-       "        156.65923419],\n",
-       "       [         nan, 186.81113341, 236.18776225, 365.51422243,\n",
-       "        157.2073271 ],\n",
-       "       [         nan, 186.59857808, 236.14708568, 365.54656023,\n",
-       "        157.98646762],\n",
-       "       [         nan, 733.76741488, 288.51892257, 914.51935485,\n",
-       "        210.60824996],\n",
-       "       [         nan, 733.19835283, 289.52171037, 914.16077405,\n",
-       "        211.53063605]])"
+       "array([[         nan, 187.84604886, 234.70997452, 365.34949105,\n",
+       "        153.92454164],\n",
+       "       [         nan, 187.84725019, 234.76562262, 365.51412665,\n",
+       "        154.48157349],\n",
+       "       [         nan, 187.78100505, 235.03795   , 365.42098047,\n",
+       "        155.14816719],\n",
+       "       [         nan, 187.61202664, 235.19142607, 365.59834928,\n",
+       "        155.55206381],\n",
+       "       [         nan, 187.62652737, 235.14055297, 365.75528803,\n",
+       "        155.76921582],\n",
+       "       [         nan, 187.17008665, 235.30365988, 364.92300572,\n",
+       "        156.35807824],\n",
+       "       [         nan, 187.14245349, 235.54444013, 364.98645149,\n",
+       "        156.61019679],\n",
+       "       [         nan, 186.91861478, 235.92696258, 365.45054733,\n",
+       "        157.50299652],\n",
+       "       [         nan, 186.76884   , 235.85001269, 365.22214261,\n",
+       "        157.96650835],\n",
+       "       [         nan, 733.93055107, 288.32337661, 914.28867194,\n",
+       "        210.66289363],\n",
+       "       [         nan, 733.38350963, 289.50241287, 913.81590094,\n",
+       "        211.89708571]])"
       ]
      },
      "execution_count": 5,
@@ -326,37 +334,37 @@
    ],
    "source": [
     "# Using Numpy.genfromtxt.  This removes the filenames\n",
-    "readin = np.genfromtxt('BD03884A/ABLocations')\n",
+    "readin = np.genfromtxt('example_data/StarLocations')\n",
     "readin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BD03884A/BD03884A_00001_skysub.fit [187.74242709 234.74869447 365.37721801 153.96780303]\n",
-      "BD03884A/BD03884A_00002_skysub.fit [187.76779923 234.82704529 365.44132552 154.46637752]\n",
-      "BD03884A/BD03884A_00003_skysub.fit [187.51596469 235.32748672 365.3873596  155.27958217]\n",
-      "BD03884A/BD03884A_00004_skysub.fit [187.58900482 235.30561714 365.67493675 155.6014538 ]\n",
-      "BD03884A/BD03884A_00005_skysub.fit [187.54278572 235.32691019 365.74298106 155.71243004]\n",
-      "BD03884A/BD03884A_00006_skysub.fit [187.0893151  235.51394442 365.21131068 156.59998825]\n",
-      "BD03884A/BD03884A_00007_skysub.fit [186.94348047 235.69080966 365.03871379 156.65923419]\n",
-      "BD03884A/BD03884A_00008_skysub.fit [186.81113341 236.18776225 365.51422243 157.2073271 ]\n",
-      "BD03884A/BD03884A_00010_skysub.fit [186.59857808 236.14708568 365.54656023 157.98646762]\n",
-      "BD03884A/BD03884A_00011_skysub.fit [733.76741488 288.51892257 914.51935485 210.60824996]\n",
-      "BD03884A/BD03884A_00012_skysub.fit [733.19835283 289.52171037 914.16077405 211.53063605]\n"
+      "example_data/BD03884A_00001_skysub.fit [187.84604886 234.70997452 365.34949105 153.92454164]\n",
+      "example_data/BD03884A_00002_skysub.fit [187.84725019 234.76562262 365.51412665 154.48157349]\n",
+      "example_data/BD03884A_00003_skysub.fit [187.78100505 235.03795    365.42098047 155.14816719]\n",
+      "example_data/BD03884A_00004_skysub.fit [187.61202664 235.19142607 365.59834928 155.55206381]\n",
+      "example_data/BD03884A_00005_skysub.fit [187.62652737 235.14055297 365.75528803 155.76921582]\n",
+      "example_data/BD03884A_00006_skysub.fit [187.17008665 235.30365988 364.92300572 156.35807824]\n",
+      "example_data/BD03884A_00007_skysub.fit [187.14245349 235.54444013 364.98645149 156.61019679]\n",
+      "example_data/BD03884A_00008_skysub.fit [186.91861478 235.92696258 365.45054733 157.50299652]\n",
+      "example_data/BD03884A_00010_skysub.fit [186.76884    235.85001269 365.22214261 157.96650835]\n",
+      "example_data/BD03884A_00011_skysub.fit [733.93055107 288.32337661 914.28867194 210.66289363]\n",
+      "example_data/BD03884A_00012_skysub.fit [733.38350963 289.50241287 913.81590094 211.89708571]\n"
      ]
     }
    ],
    "source": [
     "# To preserve column names:\n",
-    "readin = np.genfromtxt('BD03884A/ABLocations', usecols=(1,2,3,4))\n",
-    "readin_names = np.genfromtxt('BD03884A/ABLocations', usecols=(0), dtype=str)\n",
+    "readin = np.genfromtxt('example_data/StarLocations', usecols=(1,2,3,4))\n",
+    "readin_names = np.genfromtxt('example_data/StarLocations', usecols=(0), dtype=str)\n",
     "for i in range(len(readin)):\n",
     "    print(readin_names[i],readin[i])\n"
    ]
