improved sky sub tutorial

--- a/cliotools/Find stars.ipynb
+++ b/cliotools/Find stars.ipynb
@@ -19,7 +19,9 @@
     "- continues to mask and DAOStarFind until the requested number of stars in the image have been found. <br>\n",
     "\n",
     "When all stars have been found, the script writes the file name and location of all stars in x,y pairs in a file called \"StarLocations\".<br>\n",
-    "If DAOStarFinder fails to find all stars in the image, either due to poor SNR or distorted psf etc, the missing stars will be marked with nan and the row commented out with #"
+    "If DAOStarFinder fails to find all stars in the image, either due to poor SNR or distorted psf etc, the missing stars will be marked with nan and the row commented out with #\n",
+    "\n",
+    "Written by Logan A. Pearce, 2020"
    ]
   },
   {
