--- a/cliotools/Cliotools pca sky subtraction tutorial.ipynb
+++ b/cliotools/Cliotools pca sky subtraction tutorial.ipynb
@@ -30,7 +30,9 @@
     "If badpixelreplace = True, the script will look for the bad pixel maps supplied by the MagAO team (and included in this GitHub repo).  If the script doesn't find the bad pixel maps, it will retrieve them directly from the MagAO wiki.\n",
     "\n",
     "<br>\n",
-    "Sometimes instead of opposite nods, the observer will have used only one nod and taken sub skyframes (with filename appendix sky_).  In that case use <b>pcaskysub.clio_skysubtract_wskyframes</b> which functions the exact same way but builds the sky model from the sky frames rather than opposite nods."
+    "Sometimes instead of opposite nods, the observer will have used only one nod and taken sub skyframes (with filename appendix sky_).  In that case use <b>pcaskysub.clio_skysubtract_wskyframes</b> which functions the exact same way but builds the sky model from the sky frames rather than opposite nods.\n",
+    "\n",
+    "Dependencies: numpy, astropy"
    ]
   },
   {
