improved findstars accounting for image edges

--- a/cliotools/Find stars.ipynb
+++ b/cliotools/Find stars.ipynb
@@ -21,6 +21,8 @@
     "When all stars have been found, the script writes the file name and location of all stars in x,y pairs in a file called \"StarLocations\".<br>\n",
     "If DAOStarFinder fails to find all stars in the image, either due to poor SNR or distorted psf etc, the missing stars will be marked with nan and the row commented out with #\n",
     "\n",
+    "Dependencies: numpy, astropy, scipy, photutils\n",
+    "\n",
     "Written by Logan A. Pearce, 2020"
    ]
   },
